# mlkit

./: .gitignore  CMakeLists.txt
include/: cell.h  csv_reader.h  data.h  data_set.h  io.h  label_vector.h  macros.h  mlkit.h  simple_linear_regressor.h  vect.h
input/: 100-rows.csv
mlkit.xcodeproj/: project.pbxproj
mlkit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mlkit.xcodeproj/project.xcworkspace/xcuserdata/nidhaldogga.xcuserdatad/: UserInterfaceState.xcuserstate
mlkit.xcodeproj/project.xcworkspace/xcuserdata/technique.xcuserdatad/: UserInterfaceState.xcuserstate
mlkit.xcodeproj/xcuserdata/nidhaldogga.xcuserdatad/xcschemes/: ml.xcscheme  xcschememanagement.plist
mlkit.xcodeproj/xcuserdata/technique.xcuserdatad/xcschemes/: ml.xcscheme  mlkit.xcscheme  tests.xcscheme  xcschememanagement.plist
src/: cell.cpp  csv_reader.cpp  data_set.cpp  label_vector.cpp  main.cpp  simple_linear_regressor.cpp
tests/: 1000-rows.csv  csv_reader_tests.mm  mlkit_tests.h  simple_linear_regressor_tests.mm  tiny.csv
